<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".drugs.add_drugs.view.AddDrugFifthFragment"
    android:background="@color/teal_700">

    <TextView
        android:id="@+id/txtDrugQuestion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/refillReminder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDrugQuestion"
        android:background="@drawable/card_fragment">

        <EditText
            android:id="@+id/editTextPillsNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/numberOfPillsYouHave"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.7" />

        <EditText
            android:id="@+id/editTextReminderNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/reminderMeWhenIHave"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPillsNum"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:id="@+id/txtRefillReminderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableTop="@drawable/ic_time"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/selectTime"
            android:textColor="@color/teal_700"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextReminderNum"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveAddedDrug"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:backgroundTintMode="src_over"
            android:padding="8dp"
            android:text="@string/save"
            android:textSize="22sp"
            app:backgroundTint="@color/teal_700"
            app:cornerRadius="100dp"
            app:icon="@drawable/icon_next"
            app:iconGravity="end"
            app:iconPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5" />
        <!--
 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>