<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.SignUp">

    <de.hdodenhof.circleimageview.CircleImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/profile_icon"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/icons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        android:layout_marginTop="10dp"
        android:weightSum="6">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/grand_father"
            android:layout_height="60dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/elder"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/grand_mother"
            android:layout_height="60dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/grandmother"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/father"
            android:layout_height="60dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/father"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mother"
            android:layout_height="60dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/mother"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/son"
            android:layout_height="60dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/son"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/daughter"
            android:layout_height="60dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/daughter"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/layout_shaoe"
        android:padding="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/icons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        >

    <TextView
        android:id="@+id/DisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15sp"
        android:text="@string/email"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

    <TextView
        android:id="@+id/C_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15sp"
        android:text="@string/confirmPassword"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dependencyEmailTxt" />





    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15sp"
        android:text="@string/password"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />


    <EditText
        android:id="@+id/passwordConfirmTxt"
        android:layout_width="230sp"
        android:layout_height="48dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/passwordConfirmHint"
        android:inputType="textPassword"
        android:paddingLeft="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dependencyEmailTxt" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="230sp"
        android:layout_height="48dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

    <EditText
        android:id="@+id/dependencyEmailTxt"
        android:layout_width="230sp"
        android:layout_height="48dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:paddingLeft="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="230sp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/namelHint"
        android:inputType="textPersonName|text"
        android:paddingLeft="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTintMode="src_over"
        android:padding="8dp"
        android:text="@string/register"
        android:textSize="22sp"
        app:backgroundTint="@color/teal_700"
        app:cornerRadius="100dp"
        app:iconPadding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmTxt"
        app:layout_constraintWidth_percent="0.4" />

    <!--
    <Button
        android:id="@+id/registerBtn"
        android:layout_width="150sp"
        android:layout_height="48dp"
        android:background="@drawable/btn_shape"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmTxt" />
-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>